# OpenCV-ObjectDetection

./: CMakeLists.txt  README.md
src/: MultipleImageWindow.cpp  MultipleImageWindow.hpp  PreProcessImage.cpp  PreProcessImage.hpp  main.cpp
